2005-10-19  Pete's account  <Peter.Richardson@durham.ac.uk>

	* Helicity/Vertex/Vector/FFVVertex.h (Repository): added .fh file for FFVVertex

	* Decay/Perturbative/SMWZDecayer.h (Repository): added decayer for H -> f fbar

	* Helicity/Vertex/Scalar/Makefile.am (Repository): changes to include .fh file for FFSVertex

2005-10-07  Martyn Gigg  <m.a.gigg@dur.ac.uk>

	* Decay/Perturbative/SMTopDecayer.h (Repository): Added TopDecayer

2005-10-07  Pete's account  <Peter.Richardson@durham.ac.uk>

	* Decay/HwDecayHandler.cc (Repository): changes so the reference to the
	PartonicHadronizer can be set to null to switch off hadronization.

2005-10-05  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* acinclude.m4: Fixed bug #8. CLHEPINCLUDE is used correctly now

2005-09-30  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* configure.ac, Makefile.am: configure switches for Mac OS X

2005-09-29  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* src/Hw64Decays.in, src/Decays.in: Activated Mambo decayer for
	5-body decays in Hw64Decays.in to keep code working

	* Utilities/Math.cc: inlined power series

2005-09-29  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Utilities/Math.h (Repository): changes so private power series for dilog is not publically visible

	* Decay/MamboDecayer.h (Repository): removed 5 body decay option from Hw64Decayer

2005-09-28  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Decay/Baryon/BaryonFactorizedDecayer.h (Repository): added all .so files needed by library to all classes to ensure correct dynamic loading

	* Helicity/Vertex/Tensor/FFTVertex.fh (Repository): added .fh to define pointers for the tensor vertices

2005-09-27  Martyn Gigg  <m.a.gigg@dur.ac.uk>

	* Decay/MamboDecayer.cc (Repository): Added class description and removed obsolete function
	(Repository): Removed unused variables

2005-09-27  Peter Richardson  <Peter.Richardson@durham.ac.uk>
