@@ -65,92 +65,6 @@ inline void SMWZDecayer::doupdate() throw(UpdateException) {
   // Touch if anything has changed.
 }
 
-inline void SMWZDecayer::doinit() throw(InitException) {
-  DecayIntegrator::doinit();
-  // get the vertices from the Standard Model object
-  Ptr<Herwig::StandardModel>::transient_const_pointer 
-    hwsm=dynamic_ptr_cast<Ptr<Herwig::StandardModel>::transient_const_pointer>(standardModel());
-  if(hwsm)
-    {
-      _Wvertex = hwsm->vertexFFW();
-      _Zvertex = hwsm->vertexFFZ();
-      // make sure they are initialized
-      _Wvertex->init();
-      _Zvertex->init();
-    }
-  else
-    {throw InitException();}
-  // now set up the decay modes
-  DecayPhaseSpaceModePtr mode;
-  PDVector extpart(3);
-  vector<double> wgt(0);
-  // the Z decay modes
-  extpart[0]=getParticleData(ParticleID::Z0);
-  // loop over the  quarks and the leptons
-  unsigned int ix,istep=0,iy;
-  for( ;istep<11;istep+=10)
-    {
-      for(ix=1;ix<7;++ix)
-	{
-	  iy=istep+ix;
-	  if(iy!=6)
-	    {
-	      // check that the combination of particles is allowed
-	      if(_Zvertex->allowed(-iy,iy,ParticleID::Z0))
-		{
-		  extpart[1] = getParticleData(-iy);
-		  extpart[2] = getParticleData( iy);
-		  mode = new DecayPhaseSpaceMode(extpart,this);
-		  if(iy<=6){addMode(mode,_Zquarkwgt[ix-1],wgt);}
-		  else{addMode(mode,_Zleptonwgt[ix-11],wgt);}
-		}
-	      else
-		{throw InitException() << "SMWZDecayer::doinit() the Z vertex" 
-				       << "cannot handle all the modes" 
-				       << Exception::abortnow;}
-	    }
-	}
-    }
-  // and the W modes
-  extpart[0]=getParticleData(ParticleID::Wplus);
-  // loop for the quarks
-  unsigned int iz=0;
-  for(ix=1;ix<6;ix+=2)
-    {
-      for(iy=2;iy<6;iy+=2)
-	{
-	  // check that the combination of particles is allowed
-	  if(_Wvertex->allowed(-ix,iy,ParticleID::Wminus))
-	    {
-	      extpart[1] = getParticleData(-ix);
-	      extpart[2] = getParticleData( iy);
-	      mode = new DecayPhaseSpaceMode(extpart,this);
-	      addMode(mode,_Wquarkwgt[iz],wgt);
-	      ++iz;
-	    }
-	  else
-	    {throw InitException() << "SMWZDecayer::doinit() the W vertex" 
-				   << "cannot handle all the quark modes" 
-				   << Exception::abortnow;}
-	}
-    }
-  for(ix=11;ix<17;ix+=2)
-    {
-      // check that the combination of particles is allowed
-      if(_Wvertex->allowed(-ix,ix+1,ParticleID::Wminus))
-	{
-	  extpart[1] = getParticleData(-ix);
-	  extpart[2] = getParticleData(ix+1);
-	  mode = new DecayPhaseSpaceMode(extpart,this);
-	  addMode(mode,_Wleptonwgt[(ix-11)/2],wgt);
-	}
-	  else
-	    {throw InitException() << "SMWZDecayer::doinit() the W vertex" 
-				   << "cannot handle all the lepton modes" 
-				   << Exception::abortnow;}
-    }
-}
-
 inline void SMWZDecayer::dofinish() {
   DecayIntegrator::dofinish();
 }
